# roboerectus-atwork

./: README.md
src/aricc_common/aricc_topic_tools/: CMakeLists.txt  aricc_topic_tools_nodelet.xml  package.xml
src/aricc_common/aricc_topic_tools/include/aricc_topic_tools/: connection_based_nodelet.h
src/aricc_common/aricc_topic_tools/src/: connection_based_nodelet.cpp
src/aricc_common/aricc_utils/: CMakeLists.txt  package.xml
src/aricc_common/aricc_utils/include/aricc_utils/: geometry_utils.h
src/aricc_common/aricc_utils/src/: geometry_utils.cpp
src/aricc_control/aricc_lowpass_filter/: CMakeLists.txt  package.xml
src/aricc_control/aricc_lowpass_filter/launch/: bringup.launch
src/aricc_control/aricc_lowpass_filter/src/: main.cpp
src/aricc_control/aricc_pid/: CMakeLists.txt  package.xml
src/aricc_control/aricc_pid/include/aricc_pid/: pid_controller.h
src/aricc_control/aricc_pid/src/: pid_controller.cpp
src/aricc_control/aricc_twist_mux/: CMakeLists.txt  package.xml
src/aricc_control/aricc_twist_mux/config/: twist_mux.yaml
src/aricc_control/aricc_twist_mux/launch/: bringup.launch
src/aricc_control/aricc_twist_mux/src/: main.cpp
src/aricc_demo/rcwork2015/aricc_rcwork_task/: CMakeLists.txt  package.xml
src/aricc_demo/rcwork2015/aricc_rcwork_task/config/: .objects.yaml.swo  arm_joints.yaml  arm_trajectory.yaml  holes.yaml  holes.yaml.backup  holes.yaml~  image_ref.yaml  location.yaml  location_bnt.yaml  location_test.yaml  objects.yaml  objects.yaml.backup  objects.yaml~  objects_old.yaml  plan.yaml  stations.yaml  stations.yaml~
src/aricc_demo/rcwork2015/aricc_test/: CMakeLists.txt  package.xml
src/aricc_demo/rcwork2015/aricc_test/launch/: bringup.launch  bringup.launch~
src/aricc_demo/rcwork2015/aricc_test/src/: main (copy).cpp  main.cpp  main.cpp.old
src/aricc_demo/robot_interaction_box/: CMakeLists.txt  package.xml
src/aricc_demo/robot_interaction_box/launch/: bringup.launch
src/aricc_demo/robot_interaction_box/src/: main.cpp
src/aricc_laser_pipeline/: CMakeLists.txt  nodelet_plugins.xml  package.xml
src/aricc_laser_pipeline/include/aricc_laser_pipeline/: get_beam_dist.h
src/aricc_laser_pipeline/launch/: test.launch
src/aricc_laser_pipeline/msg/: BeamDistArray.msg
src/aricc_laser_pipeline/src/GetBeamDist/: get_beam_dist.cpp
src/aricc_navigation/aricc_base_local_planner/: CMakeLists.txt  blp_plugin.xml  package.xml
src/aricc_navigation/aricc_base_local_planner/cfg/: AriccBaseLocalPlanner.cfg
src/aricc_navigation/aricc_base_local_planner/include/aricc_base_local_planner/: trajectory_planner.h  trajectory_planner_ros.h
src/aricc_navigation/aricc_base_local_planner/src/: trajectory_planner.cpp  trajectory_planner.cpp.origin  trajectory_planner_ros.cpp
src/aricc_robots/aricc-youbot/youbot_motion_control/youbot_arm_ik/: CMakeLists.txt  package.xml
src/aricc_robots/aricc-youbot/youbot_motion_control/youbot_arm_joints/: CMakeLists.txt  package.xml
src/aricc_robots/aricc-youbot/youbot_motion_control/youbot_arm_joints_trajectory/: CMakeLists.txt  package.xml
src/aricc_robots/aricc-youbot/youbot_motion_control/youbot_base_alignment/: CMakeLists.txt  README  package.xml
src/aricc_robots/aricc-youbot/youbot_motion_control/youbot_unload_object_table/: CMakeLists.txt  package.xml
src/aricc_robots/aricc-youbot/youbot_teleop/: CMakeLists.txt  package.xml
src/aricc_robots/aricc-youbot/youbot_teleop/config/: params.yaml
src/aricc_robots/aricc-youbot/youbot_teleop/include/: YoubotTeleop.h
src/aricc_robots/aricc-youbot/youbot_teleop/launch/: bringup.launch
src/aricc_robots/aricc-youbot/youbot_teleop/src/: youbot_teleop_node.cpp
src/aricc_sensors/softkinetic_ros_driver/softkinetics_camera_ros/: CMakeLists.txt  nodelet_plugins.xml  package.xml
src/aricc_sensors/softkinetic_ros_driver/softkinetics_camera_ros/launch/: softkinetics.launch
src/aricc_sensors/softkinetic_ros_driver/softkinetics_camera_ros/src/: softkinetics_camera_driver.cpp  softkinetics_camera_node.cpp
src/aricc_vision_pipeline/aricc_2d_vision/: CMakeLists.txt  nodelet_plugins.xml  package.xml
src/aricc_vision_pipeline/aricc_2d_vision/cfg/: CheckBoardDetector.cfg  ColourFinder.cfg  ContourFinder.cfg  CreateThresholdImage.cfg  EdgeFinder.cfg  MaskImageOperator.cfg  MorphologicalMaskImageOperator.cfg  ProjectRotatedRect.cfg  RTTImage.cfg  RectBasedObjectDetection.cfg  RectToMaskImage.cfg  RotatedRectFinder.cfg  ShapeMatch.cfg  SmoothingImage.cfg
src/aricc_vision_pipeline/aricc_2d_vision/include/aricc_2d_vision/: RTTImage.h  add_mask_image.h  apply_mask_image.h  asad_vision.h  asad_vision.h~  check_board_detector.h  colour_finder.h  contour_finder.h  create_threshold_image.h  dilate_erode_mask_image.h  edge_finder.h  image_utils.h  mask_image_operator.h  project_rotated_rect.h  rect_based_object_detection.h  rect_to_mask_image.h  rect_to_point_cloud.h  rotated_rect_finder.h  shapematch.h  smoothing_image.h  unapply_mask_image.h
src/aricc_vision_pipeline/aricc_2d_vision/launch/: test_1.launch  test_2.launch  test_3.launch  test_3.launch~
src/aricc_vision_pipeline/aricc_2d_vision/src/AddMaskImage/: add_mask_image.cpp
src/aricc_vision_pipeline/aricc_3d_vision/: CMakeLists.txt  nodelet_plugins.xml  package.xml
src/aricc_vision_pipeline/aricc_3d_vision/cfg/: BorderEstimator.cfg  PassThroughFilter.cfg  Segmentation.cfg
src/aricc_vision_pipeline/aricc_3d_vision/launch/: border_estimator.launch  bringup.launch  pass_through_filter.launch  segmentation.launch  test.launch  test_border_estimator.launch
src/aricc_vision_pipeline/aricc_3d_vision/src/: object_segmentation.cpp
src/aricc_vision_pipeline/aricc_depth_vision/: CMakeLists.txt  nodelet_plugins.xml  package.xml
src/aricc_vision_pipeline/aricc_depth_vision/cfg/: DepthToGrayImage.cfg
src/aricc_vision_pipeline/aricc_depth_vision/launch/: test.launch
src/aricc_vision_pipeline/aricc_vision_msgs/: CMakeLists.txt  package.xml
src/aricc_vision_pipeline/aricc_vision_msgs/msg/: ContourArray.msg  Object.msg  RotatedRect.msg  RotatedRectArray.msg
src/beginner_tutotials/: CMakeLists.txt  (+1 more)
(+308 files in other folders)
