<?xml version="1.0"?>
<package>
<name>aricc_topic_tools</name>
<version>0.0.0</version>
<description>The aricc_topic_tools package</description>

<!-- One maintainer tag required, multiple allowed, one person per tag --> 
<!-- Example:  -->
<!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
<maintainer email="aricc@todo.todo">aricc</maintainer>


<!-- One license tag required, multiple allowed, one license per tag -->
<!-- Commonly used license strings: -->
<!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
<license>TODO</license>

<buildtool_depend>catkin</buildtool_depend>
<build_depend>topic_tools</build_depend>
<build_depend>message_generation</build_depend>
<build_depend>rostest</build_depend>
<build_depend>roscpp_tutorials</build_depend>
<build_depend>nodelet</build_depend>
<build_depend>rostopic</build_depend>
<build_depend>std_msgs</build_depend>
<build_depend>std_srvs</build_depend>
<build_depend>roslaunch</build_depend>
<build_depend>diagnostic_updater</build_depend>
<build_depend>diagnostic_msgs</build_depend>
<build_depend>rosnode</build_depend>
<build_depend>dynamic_tf_publisher</build_depend>
<build_depend>tf</build_depend>
<build_depend>geometry_msgs</build_depend>
<build_depend>eigen_conversions</build_depend>

<run_depend>std_msgs</run_depend>
<run_depend>std_srvs</run_depend>
<run_depend>topic_tools</run_depend>
<run_depend>message_runtime</run_depend>
<run_depend>nodelet</run_depend>
<run_depend>rostopic</run_depend>
<run_depend>roslaunch</run_depend>
<run_depend>diagnostic_updater</run_depend>
<run_depend>diagnostic_msgs</run_depend>
<run_depend>rosnode</run_depend>
<run_depend>dynamic_tf_publisher</run_depend>
<run_depend>tf</run_depend>
<run_depend>geometry_msgs</run_depend>
<run_depend>eigen_conversions</run_depend>
<export>
<nodelet plugin="${prefix}/aricc_topic_tools_nodelet.xml"/>
</export>

</package>
