<?xml version="1.0"?>
<package>
  <name>aricc_2d_vision</name>
  <version>0.0.0</version>
  <description>The aricc_2d_vision package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="aricc@todo.todo">aricc</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend> 
  <build_depend>mk</build_depend>
  <build_depend>git</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>image_view2</build_depend>
  <build_depend>driver_base</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rosbuild</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>mk</build_depend>
  <build_depend>angles</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>rospack</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>aricc_topic_tools</build_depend>
  <build_depend>aricc_utils</build_depend>

  <run_depend>rospy</run_depend>
  <!-- <run_depend>roseus</run_depend> -->
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>image_view2</run_depend>
  <run_depend>driver_base</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>rosbuild</run_depend>
  <run_depend>mk</run_depend>
  <run_depend>angles</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>rostest</run_depend>
  <run_depend>rospack</run_depend>
  <run_depend>tf</run_depend>
  <build_depend>pcl_ros</build_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>aricc_topic_tools</run_depend>
  <run_depend>aricc_utils</run_depend>
  
  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml"/>
  </export>

</package>
