<?xml version="1.0"?>
<package>
  <name>aricc_rcwork_task</name>
  <version>0.0.0</version>
  <description>The aricc_rcwork_task package</description>
  <maintainer email="aricc@todo.todo">aricc</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
