<?xml version="1.0"?>
<package>
  <name>aricc_test</name>
  <version>0.0.0</version>
  <description>The aricc_ppt package</description>
  <maintainer email="aricc@todo.todo">aricc</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>atwork_ros_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>aricc_utils</build_depend>
  <build_depend>aricc_rcwork_task</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>atwork_ros_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>aricc_utils</run_depend>
  <run_depend>aricc_rcwork_task</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
