<?xml version="1.0"?>
<package>
  <name>softkinetics_camera_ros</name>
  <version>0.1.0</version>
  <description>The softkinetic_camera package</description>

  <maintainer email="test@test.com">aricc </maintainer>
  <author>@@ </author>

  <license>BSD</license>

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>eigen</build_depend>
  
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>image_transport</run_depend>

  <!--export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml"/>
  </export-->
</package>
