<?xml version="1.0"?>
<package>
  <name>youbot_arm_ik</name>

  <version>0.1.0</version>
  <description>youbot_arm_ik</description>

  <maintainer email="xxx@todo.todo">Ian Wang</maintainer>
  <author email="xxx@todo.todo">Ian Wang</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>  
  <build_depend>aricc_utils</build_depend>  

  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>aricc_utils</run_depend>

</package>

